# spectrum-image

./: README.md  pyproject.toml  setup.py
example/: example.ipynb  example_RIXS.ipynb  example_eels.ipynb  test.ipynb
example/EELS/: example.ipynb
src/eels/: psi.py
src/spectrum-image/: SI.py  SI_util.py  __init__.py
src/spectrum_image/: EELS.py  EELS_util.py  RIXS.py  SI.py  SI_bckup.py  SI_lineshapes.py  SI_util.py  eels_bgsub.py
src/spectrum_image/EELS/: EELS_LP.py  EELS_SI.py  EELS_bgsub.py  EELS_edge.py  EELS_util.py  __init__.py
src/spectrum_image/RIXS/: RIXS_EM.py  __init__.py
