[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrum-image"
version = "0.1.0"
dependencies = [
  "numpy",
  "matplotlib",
  "jupyterlab",
  "ipympl",
  "scipy",
  "tqdm"
]
requires-python = ">=3.10"
authors = [
  {name = "Suk Hyun Sung", email = "sukhsung@umich.edu"},
]
description = "Python Package for EELS (Electron Energy Loss Spectroscopy) Analysis"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["Electron Microscopy", "EELS", "TEM", "STEM", "Electron Energy Loss Spectroscopy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/sukhsung/spectrum-image"
Repository = "https://github.com/sukhsung/spectrum-image"
"Bug Tracker" = "https://github.com/sukhsung/spectrum-image/issues"
