[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrum_image"
version = "0.2.3"
dependencies = [
  "numpy",
  "matplotlib",
  "jupyterlab",
  "ipympl",
  "scipy",
  "tqdm",
  "lmfit"
]
requires-python = ">=3.10"
authors = [
  {name = "Suk Hyun Sung", email = "sukhsung@umich.edu"},
]
description = "Python Package for EELS (Electron Energy Loss Spectroscopy) Analysis"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["Electron Microscopy", "EELS", "TEM", "STEM", "Electron Energy Loss Spectroscopy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/sukhsung/spectrum_image"
Repository = "https://github.com/sukhsung/spectrum_image"
"Bug Tracker" = "https://github.com/sukhsung/spectrum_image/issues"
